# hackathonAug102025

./: .env.example  .gitignore  LICENSE  README.md  assistant.d.backb  hello.py  pyproject.toml
app/: main.py
app/core/: config.py  time.py
app/db/: session.py
app/models/: calendar_account.py  common.py  event.py  goal.py  message.py  plan.py  preference.py  stressor.py  task.py  trait.py  user.py
app/routers/: calendar.py  chat.py  goals.py  goals_ui.py  google_auth.py  inbox.py  invite.py  memory.py  plan.py  stress_ui.py  tasks.py
app/schemas/: invite.py  plan.py
app/services/: agent_chat.py  decision.py  google_calendar.py  memory.py  planner.py
app/templates/: _cards.html  _goals_table.html  _matrix.html  _plan_container.html  _schedule.html  _stress_table.html  _tasks_table.html  base.html  chat.html  goals.html  index backupo.html  index.html  stress.html  tasks.html
